package Board;

public class Chance extends Square {

    public Chance(String name, int position) {
        super(name, position);
    }
}
