package Board;

public class Restrooms extends Square{

    public Restrooms(String name, int position) {
        super(name, position);
    }
}
